# personalab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
scripts/: auto_generate_image.py  evaluate_asset.py  gen_anchors.py  gen_ideas.py  gen_images.py  gen_videos.py  test_video_pipeline.py
src/personalab/: __init__.py
src/personalab/config/: __init__.py  _yaml.py  loader.py
src/personalab/generation/: __init__.py  idea_generator.py  image_generator.py  video_generator.py
src/personalab/llm/: client.py  (+7 more)
tests/: __init__.py  conftest.py
tests/config/: test_loader.py  test_loader_extended.py
tests/generation/: test_idea_generator.py  test_image_generator.py  test_video_generator.py
tests/identity/: test_anchor_pack.py  test_drift.py  test_evaluator.py  test_frame_extractor.py  test_geometric.py  test_identity_policy.py  test_video_evaluator.py
tests/llm/: test_client.py  test_factory.py  test_gemini.py  test_openai_adapter.py  test_replicate_adapter.py  test_runware_adapter.py  test_runway_adapter.py
tests/observability/: test_metrics_logger.py
tests/orchestration/: test_registry.py  test_video_orchestrator.py
tests/prompts/: test_builder.py  test_gemini_builder.py  test_loading.py  test_renderer.py
tests/quality/: test_illumination.py  test_post_processing_gate.py  test_sharpness.py  test_video_quality_evaluator.py
tests/runtime/: test_concurrency.py  test_eval_pool.py  test_job.py  test_retry_policy.py  test_runner.py
tests/schemas/: test_character.py  test_llm_schemas.py  test_prompts.py
tests/tools/: test_realism.py
(+51 files in other folders)
